<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/chart_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="16dp">

    <TextView
        android:id="@+id/tv_price_chart"
        style="@style/KryptoText.Huge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="$50.8"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_up_or_down_chart"
        style="@style/KryptoText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="0dp"
        android:paddingEnd="4dp"
        android:text="▲"
        android:textColor="@color/color_gain"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_chart" />

    <TextView
        android:id="@+id/tv_price_change1_chart"
        style="@style/KryptoText.BodyTertiary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:text="-$0.04"
        app:layout_constraintStart_toEndOf="@+id/tv_up_or_down_chart"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_chart" />

    <TextView
        android:id="@+id/tv_price_change2_chart"
        style="@style/KryptoText.Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="+8.1%"
        android:textColor="@color/color_gain"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_price_change1_chart"
        app:layout_constraintStart_toEndOf="@+id/tv_price_change1_chart"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_chart" />

    <com.robinhood.spark.SparkView
        android:id="@+id/sparkView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_change2_chart"
        app:spark_animateChanges="true"
        app:spark_lineColor="@color/color_primary"
        app:spark_scrubEnabled="true" />

    <TextView
        android:id="@+id/tv_network_error"
        style="@style/KryptoText.BodyAlternate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Something happened!\nplease check your connection"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sparkView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/sparkView"
        app:layout_constraintTop_toTopOf="@+id/sparkView" />

    <RadioGroup
        android:id="@+id/rg_periods_chart"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sparkView">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_12h"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/period_12h"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_1d"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/period_1day"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_1w"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/period_1week"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_1m"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/period_1month"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_3m"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/period_3month"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_1y"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/period_1year"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textStyle="bold" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/rb_all"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@drawable/range_radio_btn_selector_background"
            android:button="@null"
            android:checked="false"
            android:gravity="center"
            android:paddingHorizontal="8dp"
            android:text="@string/period_all"
            android:textColor="@drawable/range_radio_btn_selector"
            android:textStyle="bold" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>